gitops/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "No se permite usar el tag ':latest'. Usa un tag inmutable (ej. SHA del commit)."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
